--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,12 +2,24 @@
 name = "digitour-rs"
 version = "0.0.1"
 edition = "2021"
+authors = ["Kristofers Solo <dev@Kristofers.xyz>"]
+license = "GPLv3"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+
 
 [dependencies]
 actix-web = "4.4"
 serde = { version = "1", features = ["derive"] }
+serde_json = "1"
 chrono = { version = "0.4", features = ["serde"] }
-uuid = { version = "1.4", features = ["v4"] }
 color-eyre = "0.6"
+sqlx = { version = "0.7", features = [
+  "runtime-tokio",
+  "postgres",
+  "macros",
+  "chrono",
+  "json",
+  "uuid",
+  "migrate",
+] }
