--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,20 +1,10 @@
-[package]
-name = "digitour"
-version = "0.0.1"
-edition = "2021"
-authors = ["Kristofers Solo <dev@Kristofers.xyz>"]
-license = "GPLv3"
+[workspace]
+members = ["api/lib", "api/actix", "api/db", "shared"]
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
-
-[dependencies]
+[workspace.dependencies]
+shared = { path = "./shared" }
+api-lib = { path = "./api/lib" }
 actix-web = "4.4"
-serde = { version = "1", features = ["derive"] }
-serde_json = "1"
-chrono = { version = "0.4", features = ["serde"] }
-color-eyre = "0.6"
-dotenv = "0.15"
 sqlx = { version = "0.7", features = [
   "runtime-tokio",
   "postgres",
@@ -24,9 +14,9 @@ sqlx = { version = "0.7", features = [
   "uuid",
   "migrate",
 ] }
-
-[package.metadata.scripts]
-db_create = "bash ./scripts/create_db"
-db_start = "sudo docker start DigiTour"
-db_stop = "sudo docker stop DigiTour"
-db_remove = "sudo docker rm DigiTour"
+serde = { version = "1", features = ["derive"] }
+uuid = { version = "1.4", features = ["serde", "v4"] }
+chrono = { version = "0.4", features = ["serde"] }
+color-eyre = "0.6"
+tracing = "0.1"
+dotenv = "0.15"
