--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,4 +1,3 @@
-
 [workspace]
 resolver = "2"
 members = ["api/lib", "api/actix", "api/db", "shared"]
@@ -6,6 +5,7 @@ members = ["api/lib", "api/actix", "api/db", "shared"]
 [workspace.dependencies]
 shared = { path = "./shared" }
 api-lib = { path = "./api/lib" }
+api-db = { path = "./api/db" }
 actix-web = "4.4"
 sqlx = { version = "0.7", features = [
   "runtime-tokio",
