--- a/api/actix/Cargo.toml
+++ b/api/actix/Cargo.toml
@@ -4,9 +4,9 @@ version = "0.1.0"
 edition = "2021"
 publish = false
 
-
 [dependencies]
 api-lib = { workspace = true }
+api-db = { workspace = true }
 sqlx = { workspace = true }
 actix-web = { workspace = true }
 dotenv = { workspace = true }
@@ -16,10 +16,4 @@ tracing-subscriber = { version = "0.3", features = [
   "json",
   "time",
 ] }
-
-
-[package.metadata.scripts]
-db_create = "bash ./scripts/create_db"
-db_start = "sudo docker start DigiTour"
-db_stop = "sudo docker stop DigiTour"
-db_remove = "sudo docker rm DigiTour"
+color-eyre = { workspace = true }
