--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -1,4 +1,4 @@
-name: Rust
+name: Test
 on: [push, pull_request]
 env:
   CARGO_TERM_COLOR: always
@@ -8,9 +8,9 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - name: Setup Docker
-        run: docker/setup-buildx-action@v3
+        uses: docker/setup-buildx-action@v3
       - name: Build and run Docker Compose
-      - run: docker-compose up -d
+        run: docker-compose up -d
       - name: Migrate
         run: |
           cargo install sqlx-cli
