--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -6,16 +6,28 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+      - name: Setup Rust
+        uses: actions-rs/toolchain@v1
+        with:
+          profile: minimal
+          toolchain: stable
+          override: true
       - uses: actions/checkout@v4
       - name: Setup Docker
         uses: docker/setup-buildx-action@v3
       - name: Build and run Docker Compose
         run: docker-compose up -d
-      - name: Migrate
-        run: |
-          cargo install sqlx-cli
-          cargo sqlx migrate run
       - run: mv .env.example .env
+      - name: Cache SQLx CLI
+        uses: actions/cache@v2
+        with:
+          path: ~/.cargo/bin/sqlx
+          key: ${{ runner.os }}-sqlx-cli-${{ hashFiles('**/Cargo.lock') }}
+          restore-keys: ${{ runner.os }}-sqlx-cli-
+      - name: Install SQLx CLI
+        run: cargo install sqlx-cli
+      - name: Run migrations
+        run: ~/.cargo/bin/sqlx migrate run
       - name: Clippy
         if: github.ref == 'refs/head/main'
         run: cargo clippy -- -W clippy::unwrap_used -W clippy::pedantic -W clippy::nursery
