--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -12,6 +12,7 @@ jobs:
           profile: minimal
           toolchain: stable
           override: true
+          components: clippy
       - uses: actions/checkout@v4
       - name: Setup Docker
         uses: docker/setup-buildx-action@v3
@@ -19,7 +20,7 @@ jobs:
         run: docker-compose up -d
       - run: mv .env.example .env
       - name: Cache SQLx CLI
-        uses: actions/cache@v2
+        uses: actions/cache@v3
         with:
           path: ~/.cargo/bin/sqlx
           key: ${{ runner.os }}-sqlx-cli-${{ hashFiles('**/Cargo.lock') }}
