fix(workflow): quiet install

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -26,7 +26,7 @@ jobs:
           key: ${{ runner.os }}-sqlx-cli-${{ hashFiles('**/Cargo.lock') }}
           restore-keys: ${{ runner.os }}-sqlx-cli-
       - name: Install SQLx CLI
-        run: cargo install sqlx-cli
+        run: cargo install sqlx-cli -q
       - name: Run migrations
         run: ~/.cargo/bin/sqlx migrate run
       - name: Clippy
